# aqr

all_test/: CMakeLists.txt  package.xml
all_test/launch/: start.py
aqr_control/: CMakeLists.txt  package.xml
aqr_control/include/aqr_control/: bmath.h  mybase.h
aqr_control/src/: aqr_control.cpp  bmath.cpp  kinematics.cpp
arm/all_test/src/: all_test.cpp
arm/double3config/: .setup_assistant  CMakeLists.txt  package.xml
arm/double3config/config/: initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  ros2_controllers.yaml
arm/double3config/launch/: demo.launch.py  move_group.launch.py  static_virtual_joint_tfs.launch.py
arm/doublearm6_description/: package.xml  setup.cfg  setup.py
arm/doublearm6_description/launch/: display.launch.py  gazebo.launch.py
arm/doublearm6_description/meshes/: base_link.stl  huagan_1.stl  link_l1_1.stl  link_l4_1.stl  link_l8_1.stl  link_r1_2.stl  link_r2_2.stl  link_r3_2.stl  link_r4_2.stl  link_r7_1.stl  link_r8_1.stl
arm/doublearm6_description/urdf/: doublearm6.gazebo  doublearm6.xacro  materials.xacro
arm/water/: CMakeLists.txt  package.xml
armquadrover_gnb/armquadrover_msgs/: package.xml
demo-app/app/: build.gradle.kts
demo-app/app/src/main/: AndroidManifest.xml
demo-app/gradle/: libs.versions.toml
demo-app/gradle/wrapper/: gradle-wrapper.properties
depth_image_processing/: CMakeLists.txt  package.xml
depth_image_processing/src/: depth_image_processing.cpp
double3config/config/: doublearm6.ros2_control.xacro  doublearm6.srdf  doublearm6.urdf.xacro  kinematics.yaml  moveit.rviz
double3config/launch/: moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  warehouse_db.launch.py
doublearm6_description/meshes/: link_l2_1.stl  link_l3_1.stl  link_l5_1.stl  link_l6_1.stl  link_l7_1.stl  link_r5_2.stl  link_r6_1.stl
doublearm6_description/urdf/: .py  doublearm6.trans  doublearm6.urdf
microros/: .cproject  .mxproject  .project  CMakeLists.txt  CMakeLists_template.txt  STM32F407VETX_FLASH.ld  bf.c  daplink.cfg  microros Debug.cfg  microros Debug.launch  microros.ioc
microros/Core/Inc/: Emm_V5.h  arm_servo.h  arm_servo_c_api.h  crc.h  ddsm115.h  ddsm115_c_api.h  fifo.h  main.h  servo.h  servo_c_api.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  usart.h
microros/Core/Src/: adc.c  dma.c  freertos.c  gpio.c  main.cpp  stm32f4xx_hal_timebase_tim.c  stm32f4xx_it.c  usart.c
microros/Core/User/: Emm_V5.c  arm_servo.cpp  arm_servo_c_api.cpp  crc.c  ddsm115.cpp  ddsm115_c_api.cpp  fifo.c  servo.cpp  servo_c_api.cpp
microros/Core/extra_sources/microros_transports/: usb_cdc_transport.c
microros/Core/libmicroros/: available_ros2_types  built_packages
microros/Debug/: makefile  microros.elf  microros.list  microros.map  objects.list  sources.mk
microros/Debug/Core/Src/: adc.cyclo  adc.d  adc.su  ddsm115.cyclo  ddsm115.d  ddsm115.su  dma.d  freertos.cyclo  freertos.d  freertos.su  gpio.d  main.cyclo  main.d  main.su  stm32f4xx_hal_msp.d  stm32f4xx_hal_timebase_tim.d  stm32f4xx_it.cyclo  stm32f4xx_it.d  stm32f4xx_it.su  subdir.mk  system_stm32f4xx.d  usart.cyclo  usart.d  usart.su  usb_otg.cyclo  usb_otg.d
microros/Debug/Core/extra_sources/: subdir.mk
microros/Debug/Core/extra_sources/microros_transports/: dma_transport.cyclo  dma_transport.d  dma_transport.su  subdir.mk
microros/Debug/Drivers/STM32F4xx_HAL_Driver/Src/: stm32f4xx_hal.d  stm32f4xx_hal_adc.d  stm32f4xx_hal_adc_ex.d  (+19 more)
real_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
real_ws/src/armquadrover_gnb/armquadrover/: CMakeLists.txt  package.xml
real_ws/src/armquadrover_gnb/armquadrover_msgs/: CMakeLists.txt
toycar_voice/: CMakeLists.txt  package.xml
toycar_voice/src/: publisher_member_function.cpp  subscriber_member_function.cpp
water/src/: water.cpp
wheeltec_mic/wheeltec_mic_msg/: CMakeLists.txt  package.xml
wheeltec_mic/wheeltec_mic_msg/msg/: PcmMsg.msg
wheeltec_mic/wheeltec_mic_msg/srv/: GetDeviceType.srv  SetAwakeWord.srv  SwitchMic.srv
wheeltec_mic/wheeltec_mic_ros2/: CMakeLists.txt  package.xml  readme.md
wheeltec_mic/wheeltec_mic_ros2/audio/: vvui_deno.pcm
wheeltec_mic/wheeltec_mic_ros2/config/: call.bnf
wheeltec_mic/wheeltec_mic_ros2/config/msc/res/asr/GrmBuilld/: afheqdaa.d  alyujica.d  axzfadfa.d  call.g  call_16K  cegydfba.d  cfwsoica.d  cwafdcba.d  efzujica.d  eopmkaaa.d  epwsoica.d  fjbohgaa.d  fkzujica.d  gdnpbwba.d  jcbmljba.d  jfrcszaa.d  jkstuqca.d  lowuioaa.d  nznwraaa.d  qggitrca.d  rvteaaaa.d  tjutlmfa.d  tlzjvbaa.d  uaoyxoba.d  ufuvpaba.d  vfsrjjaa.d  xvxujica.d  yayujica.d  ykvsoica.d  zayjlega.d
wheeltec_mic/wheeltec_mic_ros2/config/msc/res/asr/GrmBuilld/temp/: aaynxvba.d  aqaqsvba.d  avvsoica.d  bawsoica.d  bfynxvba.d  bqyujica.d  bvaqsvba.d  bzdbdtfa.d  call.g  call_16K  ckynxvba.d  cuqblmaa.d  cvyujica.d  daguopba.d  dazujica.d  dkwsoica.d  dmlidhea.d  eymubdfa.d  forkgpba.d  fsseaaaa.d  fuwsoica.d  gxzkgtaa.d  gzwsoica.d  imqhxtba.d  iolfbcca.d  iyidgcca.d  jdjdgcca.d  jngblcca.d  jtlfbcca.d  kgvcdaaa.d  kijdgcca.d  kylfbcca.d  ldmfbcca.d  lnjdgcca.d  lnsaysca.d  mimfbcca.d  msjdgcca.d  nchmbrea.d  nnmfbcca.d  nxjdgcca.d  (+34 more)
wheeltec_mic/wheeltec_mic_ros2/include/: MySQLConnector.h  action_encoding.h  asr_offline_record_sample.h  call_recognition.h  command_recognition.h  mysql.h  node_feedback.h  play_path.h  record_param.h  user_interface.h  voice_control.h  wheeltec_mic.h
wheeltec_mic/wheeltec_mic_ros2/launch/: base.launch.py  mic_init.launch.py  offline.launch.py  online.launch.py  speech_synthesis.launch.py  voice_control.launch.py  voice_recognition.launch.py  wheeltec_mic.launch.py
wheeltec_mic/wheeltec_mic_ros2/src/: call_recognition.cpp  command_recognition.cpp  node_feedback.cpp  ros2_service.cpp  spark.cpp  voice_control.cpp  wheeltec_mic.cpp  wheeltec_micf.cpp
xf_asr/: CMakeLists.txt  package.xml
xf_asr/launch/: wheeltec_mic.launch.py
xf_asr/src/: xf_asr.cpp
yolov8/: package.xml  setup.cfg  setup.py
yolov8/yolov8/: yolo_cut.py
yolov8/yolov8.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
(+28 files in other folders)
